--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "framework-azure",
     "description": "Azure Sphere Frameworks for PlatformIO 2019 Georgi Angelov",
-    "url": "",
+    "url": "https://github.com/Wiz-IO/framework-azure",
     "system": "*",
     "version": "1.0.0"
 }
